--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
   --black: #000;
   --background-color: #d5e1ef;
   --text-color: #9b9ea3;
+  --text-color2: #283143;
 }
 body {
   margin: 0;
@@ -12,14 +13,13 @@ body {
   font-family: 'Outfit', sans-serif;
 }
 .main {
-  max-width: 300px;
   height: 100vh;
-  margin: 0 auto;
 }
 .flex {
   display: flex;
+  margin: 0 auto;
   flex-direction: column;
-  width: 100%;
+  max-width: 320px;
   height: 100%;
   justify-content: center;
 }
@@ -45,6 +45,6 @@ body {
 .textBold {
   font-size: 18px;
   font-weight: 700;
-  color: var(--black);
+  color: var(--text-color2);
   text-align: center;
 }
